--- a/2019-04-25-DerbyPy-DocumentingPythonPackages/DocumentingPythonPackages.Rmd
+++ b/2019-04-25-DerbyPy-DocumentingPythonPackages/DocumentingPythonPackages.Rmd
@@ -2,11 +2,11 @@
 title: "Documenting Python Packages"
 subtitle: "<font color='green'>Docs</font> or it didn't happen!"
 author: "Andrey Smelter"
-institute: "University of Kentucky</br>Markey Cancer Center"
+institute: "University of Kentucky<br>Markey Cancer Center"
 date: "2019/04/11 (updated: `r Sys.Date()`)"
 output:
   xaringan::moon_reader:
-    css: ["default", "default-fonts", "footer-header.css", "my-theme.css"]
+    css: ["default", "default-fonts", "resources/css/footer-header.css", "resources/css/my-theme.css", "https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"]
     lib_dir: libs
     nature:
       highlightStyle: github
